Basic Structure Completed
Added nav buttons and confirmed script is working via HTML Webpack Plugin

--- a/src/template.html
+++ b/src/template.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Document</title>
+    <title>Restaurant Project</title>
 </head>
 <body>
-    <h1>Test</h1>
+    <header>
+        <nav>
+            <button>Home</button>
+        </nav>
+        <nav>
+            <button>Menu</button>
+        </nav>
+        <nav>
+            <button>About</button>
+        </nav>
+    </header>
     <!-- No script tag needed. HTML Webpack Plugin will add the output file from its configuration here 
      automatically-->
 </body>
