Successfully adding HTML content via script code

--- a/src/template.html
+++ b/src/template.html
@@ -17,6 +17,10 @@
             <button>About</button>
         </nav>
     </header>
+
+    <div id="content">
+        <!-- Content will be dynamically loaded here -->
+    </div>
     <!-- No script tag needed. HTML Webpack Plugin will add the output file from its configuration here 
      automatically-->
 </body>
