--- a/src/template.html
+++ b/src/template.html
@@ -6,14 +6,11 @@
     <title>Restaurant Project</title>
 </head>
 <body>
-    <header>
-        <h1>My Restaurant</h1>
-        <nav>
-            <button>Home</button>
-        </nav>
+    <header class="nav">
         <nav>
             <button>Menu</button>
         </nav>
+        <h1>My Restaurant</h1>
         <nav>
             <button>About</button>
         </nav>
