pageLoad script done for now, connected and working content script

--- a/src/template.html
+++ b/src/template.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <header class="nav">
-        <nav>
+        <nav class="one">
             <button>Menu</button>
         </nav>
-        <h1>My Restaurant</h1>
-        <nav>
+        <h1 class="two"><a href="./">My Restaurant</a></h1>
+        <nav class="three">
             <button>About</button>
         </nav>
     </header>
